--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
 <div class="emoji">🦝✨</div>
 <h1>Welcome to Raccoon-Man-P's GitHub Page</h1>
 <p>Projects:</p>
-<a href="https://github.com/Raccoon-Man-P" target="_blank">Visit My GitHub</a>
+<a href="https://github.com/Raccoon-Man-P" target="_blank">Visit My GitHub:</a>
 </body>
 </html>
