--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
 <h1>Welcome to Raccoon-Man-P's GitHub Page</h1>
 <p>Projects:</p>
 <a href="https://github.com/Raccoon-Man-P" target="_blank">Visit My GitHub:</a>
-<a href="https://racoon-man-p.github.io/colkcform" target="_blank">Current project</a>
+<a href="https://raccoon-man-p.github.io/colkcform" target="_blank">Current project</a>
 </body>
 </html>
